using session_info hash in config file

--- a/fluent.conf
+++ b/fluent.conf
@@ -69,6 +69,11 @@
 <match apache.*>
   @type scalyr
   api_write_token 0Le5BQxEFBZ_od5cA0biuP2lWhIeXIZcNGn4hvB5ftak-
+  session_info {
+    "imron": "testing session info",
+    "with": "some random text"
+    #"region": "us-east-1"
+  }
   flush_interval 5s
 </match>
 
