using numbers for thread ids

--- a/fluent.conf
+++ b/fluent.conf
@@ -70,8 +70,7 @@
   @type scalyr
   api_write_token 0Le5BQxEFBZ_od5cA0biuP2lWhIeXIZcNGn4hvB5ftak-
   session_info {
-    "imron": "testing session info",
-    "with": "some random text"
+    "ruby": "1.9.3"
     #"region": "us-east-1"
   }
   flush_interval 5s
