--- a/fluent.conf
+++ b/fluent.conf
@@ -24,12 +24,12 @@
 
 ## File input
 ## read apache logs with tag=apache.access
-<source>
-  @type tail
-  format apache
-  path /var/log/httpd/access_log
-  tag apache.1
-</source>
+#<source>
+  #@type tail
+  #format none
+  #path /var/log/httpd/access_log
+  #tag apache.11
+#</source>
 
 <source>
   @type tail
@@ -38,12 +38,12 @@
   tag apache.2
 </source>
 
-<source>
-  @type tail
-  format apache
-  path /var/log/httpd/access_log
-  tag apache.3
-</source>
+#<source>
+  #@type tail
+  #format none
+  #path /var/log/httpd/access_log
+  #tag apache.33
+#</source>
 
 # Listen HTTP for monitoring
 # http://localhost:24220/api/plugins
@@ -66,14 +66,27 @@
 </source>
 
 ## match tag=apache.access and write to file
-<match apache.*>
+<match apache.1>
+  @type scalyr
+  api_write_token 0Le5BQxEFBZ_od5cA0biuP2lWhIeXIZcNGn4hvB5ftak-
+  flush_interval 5s
+</match>
+
+<match apache.2>
+  @type scalyr
+  api_write_token 0Le5BQxEFBZ_od5cA0biuP2lWhIeXIZcNGn4hvB5ftak-
+  flush_interval 5s
+  buffer_chunk_limit 64k
+  buffer_queue_limit 20
+</match>
+
+<match apache.3>
   @type scalyr
   api_write_token 0Le5BQxEFBZ_od5cA0biuP2lWhIeXIZcNGn4hvB5ftak-
   session_info {
-    "ruby": "1.9.3"
-    #"region": "us-east-1"
+    "session-info": "test"
   }
-  flush_interval 5s
+  flush_interval 6s
 </match>
 
 ## match tag=debug.** and dump to console
