--- a/fluent.conf
+++ b/fluent.conf
@@ -66,25 +66,25 @@
 </source>
 
 ## match tag=apache.access and write to file
-<match apache.1>
-  @type scalyr
-  api_write_token 0Le5BQxEFBZ_od5cA0biuP2lWhIeXIZcNGn4hvB5ftak-
-  flush_interval 5s
-</match>
+#<match apache.1>
+#  @type scalyr
+#  api_write_token 0Le5BQxEFBZ_od5cA0biuP2lWhIeXIZcNGn4hvB5ftak-
+#  flush_interval 5s
+#</match>
 
 <match apache.2>
   @type scalyr
   api_write_token 0Le5BQxEFBZ_od5cA0biuP2lWhIeXIZcNGn4hvB5ftak-
 </match>
 
-<match apache.3>
-  @type scalyr
-  api_write_token 0Le5BQxEFBZ_od5cA0biuP2lWhIeXIZcNGn4hvB5ftak-
-  session_info {
-    "session-info": "test"
-  }
-  flush_interval 6s
-</match>
+#<match apache.3>
+#  @type scalyr
+#  api_write_token 0Le5BQxEFBZ_od5cA0biuP2lWhIeXIZcNGn4hvB5ftak-
+#  session_info {
+#    "session-info": "test"
+#  }
+#  flush_interval 6s
+#</match>
 
 ## match tag=debug.** and dump to console
 <match debug.**>
