changed session_info to server_attributes and update examples to match the API docs

--- a/fluent.conf.sample
+++ b/fluent.conf.sample
@@ -3,9 +3,11 @@
   api_write_token YOUR_WRITE_LOGS_API_TOKEN
 
   ##Scalyr specific options
-  # session_info { "host":"some-host",
-  #                "custom":"your custom session info"
-  #              }
+  # server_attributes {
+  #   "serverHost": "front-1",
+  #   "serverType": "frontend",
+  #   "region":     "us-east-1"
+  # }
   # scalyr_server https://agent.scalyr.com/
   # ssl_ca_bundle_path /etc/ssl/certs/ca-bundle.crt
   # ssl_verify_peer true
