--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,13 +14,15 @@
 
 version: 2
 
+orbs:
+  slack: circleci/slack@3.4.2
+
 jobs:
   build-test:
     docker:
       - image: circleci/ruby:2.6.3
     steps:
       - checkout
-
       - restore_cache:
           name: Restore Ruby Dependencies Cache
           keys:
@@ -48,6 +50,10 @@ jobs:
           key: gem-cache-v1-{{ checksum "Gemfile.lock" }}
           paths:
             - " ~/.bundle/cache/"
+      # Depends on "SLACK_WEBHOOK" environment variable being set
+      - slack/status:
+          fail_only: true
+          only_for_branches: master
 
 workflows:
   version: 2
