Publish gem to rubygems on push to git tag with an expected name.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,51 +12,104 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-version: 2
+version: 2.1
 
 orbs:
   slack: circleci/slack@3.4.2
+
+commands:
+  build-test-deploy:
+    description: "Run lint, tests and optionally publish the gem to RubyGems"
+    parameters:
+      deploy_changes:
+        description: "True to deploy changes to RubyGems."
+        type: boolean
+        default: false
+    steps:
+      - checkout
+
+      - restore_cache:
+          name: Restore Ruby Dependencies Cache
+          keys:
+            - gem-cache-v1-{{ checksum "Gemfile.lock" }}
+
+      - run:
+          name: Install Ruby Dependencies
+          command: |
+            bundle install
+            gem install rubocop
+
+      - run:
+          name: Run Lint
+          command: |
+            # For now, don't fail on failure
+            rubocop || true
+
+      - run:
+          name: Build Plugin
+          command: |
+            rake build
+
+      - run:
+          name: Run Tests
+          command: |
+            rake test
+
+      - save_cache:
+          name: Save Ruby Dependencies Cache
+          key: gem-cache-v1-{{ checksum "Gemfile.lock" }}
+          paths:
+            - " ~/.bundle/cache/"
+
+      - when:
+          # Depends on "RUBYGEMS_API_KEY" environment variable being set
+          condition: << parameters.deploy_changes >>
+          steps:
+            - run:
+                name: "Write RubyGems Credentials to a file"
+                command: |
+                  ./scripts/set-up-rubygems-credentials.sh
+
+            - run:
+                name: "Publish package to RubyGems"
+                command: |
+                  echo "test"
+                  #gem push pkg/fluent-plugin-scalyr-$(cat VERSION).gem
+
+      # Depends on "SLACK_WEBHOOK" environment variable being set
+      - slack/status:
+          fail_only: true
+          only_for_branches: master
 
 jobs:
   build-test:
     docker:
       - image: circleci/ruby:2.6.3
     steps:
-      - checkout
-      - restore_cache:
-          name: Restore Ruby Dependencies Cache
-          keys:
-            - gem-cache-v1-{{ checksum "Gemfile.lock" }}
-      - run:
-          name: Install Ruby Dependencies
-          command: |
-            bundle install
-            gem install rubocop
-      - run:
-          name: Run Lint
-          command: |
-            # For now, don't fail on failure
-            rubocop || true
-      - run:
-          name: Build Plugin
-          command: |
-            rake build
-      - run:
-          name: Run Tests
-          command: |
-            rake test
-      - save_cache:
-          name: Save Ruby Dependencies Cache
-          key: gem-cache-v1-{{ checksum "Gemfile.lock" }}
-          paths:
-            - " ~/.bundle/cache/"
-      # Depends on "SLACK_WEBHOOK" environment variable being set
-      - slack/status:
-          fail_only: true
-          only_for_branches: master
+      - build-test-deploy:
+          deploy_changes: false
+
+  build-test-publish-to-rubygems:
+    docker:
+      - image: circleci/ruby:2.6.3
+    steps:
+      - build-test-deploy:
+          deploy_changes: true
 
 workflows:
   version: 2
-  build-test:
+  build-test-deploy:
     jobs:
-      - build-test
+      - build-test:
+          filters:
+            branches:
+               only: /.*/
+            tags:
+              ignore: /^v[0-9]+\.[0-9]+\.[0-9]+/
+      - build-test-publish-to-rubygems:
+          filters:
+            tags:
+              only:
+                - /^v[0-9]+\.[0-9]+\.[0-9]+/
+            branches:
+               ignore: /.*/
