--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,7 @@ commands:
       - run:
           name: Install Ruby Dependencies
           command: |
-            bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs=4 --retry=3
-            gem install rubocop
+            bundle check || bundle install --jobs=4 --retry=3
 
       - save_cache:
           name: Save Ruby Dependencies Cache
