--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ commands:
       - restore_cache:
           name: Restore Ruby Dependencies Cache
           keys:
-            - gem-cache-v1-{{ checksum "Gemfile.lock" }}
+            - gem-cache-v2-{{ .Branch }}-{{ checksum "Gemfile.lock" }}
 
       - run:
           name: Install Ruby Dependencies
@@ -40,8 +40,9 @@ commands:
 
       - save_cache:
           name: Save Ruby Dependencies Cache
-          key: gem-cache-v1-{{ checksum "Gemfile.lock" }}
+          key: gem-cache-v2-{{ .Branch }}-{{ checksum "Gemfile.lock" }}
           paths:
+            - "/usr/local/bundle"
             - "~/.bundle/cache/"
             - "~/.gem/specs/"
 
