Re format code with rubocop, enable check on CI.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,8 +48,7 @@ commands:
       - run:
           name: Run Lint
           command: |
-            # For now, don't fail on failure
-            rubocop || true
+            rubocop
 
       - run:
           name: Build Plugin
