Try and get necessary permissions in circleCI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ commands:
       - run:
           name: Become root
           command: |
-            sudo su
+            sudo -i
 
       - checkout
 
