--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,12 @@ commands:
             - "~/.gem/specs/"
 
       - run:
+          name: Setup Docker
+          command: |
+            curl -fsSL https://get.docker.com -o get-docker.sh
+            sh get-docker.sh
+
+      - run:
           name: Run Lint
           command: |
             rubocop
