--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,12 @@ commands:
             - "~/.gem/specs/"
 
       - run:
+          name: Setup Docker
+          command: |
+            sudo service docker start
+
+
+      - run:
           name: Run Lint
           command: |
             rubocop
@@ -63,7 +69,7 @@ commands:
       - run:
           name: Build Docker Image
           command: |
-            sudo docker build -t scalyr/fluentd:$(cat VERSION) -f docker/Dockerfile .
+            docker build -t scalyr/fluentd:$(cat VERSION) -f docker/Dockerfile .
 
       - when:
           # Depends on "RUBYGEMS_API_KEY" environment variable being set
@@ -77,7 +83,7 @@ commands:
             - run:
                 name: "Setup Docker credentials"
                 command: |
-                  sudo docker login -u scalyr -p $DOCKER_PASSWORD
+                  docker login -u scalyr -p $DOCKER_PASSWORD
 
             - run:
                 name: "Publish package to RubyGems"
@@ -87,7 +93,7 @@ commands:
             - run:
                 name: "Publish image to Dockerhub"
                 command: |
-                  sudo docker push scalyr/fluentd:$(cat VERSION)
+                  docker push scalyr/fluentd:$(cat VERSION)
 
       # Depends on "SLACK_WEBHOOK" environment variable being set
       - slack/status:
