--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,6 +7,11 @@ RUN mv /fluent-plugin-scalyr-*.gem /fluent-plugin-scalyr.gem
 
 RUN apk add --no-cache --update --virtual .build-deps \
         build-base ruby-dev \
+ && pwd \
+ && ls -l . \
+ && ls -l /usr/lib/ruby \
+ && ls -l /usr/lib/ruby/gems \
+ && ls -l /usr/lib/ruby/gems/3.1.0 \
  && gem install fluent-plugin-scalyr.gem \
  && gem sources --clear-all \
  && apk del .build-deps \
