--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,8 +6,8 @@ COPY ./pkg/fluent-plugin-scalyr-*.gem /
 RUN mv /fluent-plugin-scalyr-*.gem /fluent-plugin-scalyr.gem
 
 RUN apk add --no-cache --update --virtual .build-deps \
-        build-base ruby-dev \
- && gem install -V --backtrace fluent-plugin-scalyr.gem \
+        sudo build-base ruby-dev \
+ && sudo gem install fluent-plugin-scalyr.gem \
  && gem sources --clear-all \
  && apk del .build-deps \
  && rm -rf /tmp/* /var/tmp/* /usr/lib/ruby/gems/*/cache/*.gem
