--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,8 +7,8 @@ RUN mv /fluent-plugin-scalyr-*.gem /fluent-plugin-scalyr.gem
 
 RUN apk add --no-cache --update --virtual .build-deps \
         build-base ruby-dev \
- && mkdir -p /root/.local/share/gem/ruby/3.1.0 \
- && gem install --user-install fluent-plugin-scalyr.gem \
+ && gem update --system \
+ && gem install fluent-plugin-scalyr.gem \
  && gem sources --clear-all \
  && apk del .build-deps \
  && rm -rf /tmp/* /var/tmp/* /usr/lib/ruby/gems/*/cache/*.gem
