--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -101,7 +101,11 @@ jobs:
       - image: cimg/ruby:3.1.2
     steps:
       - setup_remote_docker:
-          version: 20.10.14
+          # FIXME STOPPED 20.10.14 worked ok with CircleCI
+          #               Seems cannot request 20.10.17 (locally used version)
+          #               The default 20.10.16 causes problems
+          #               Try 20.10.15 and 20.10.16 explicitly
+          version: 20.10.15
       - build-test-deploy:
           deploy_changes: false
 
