--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,6 +20,7 @@ jobs:
         with:
           ruby-version: 3.1
           bundler-cache: true
+          bundler: default
 
       - name: Run lint
         run: bundle exec rubocop
