Disable undesired lint violation RequiredRubyVersion
We don't know what version of ruby customers are using with our gem, and
we should not force a newer version upon them just to satisfy a linter.

DSET-2194

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -147,3 +147,7 @@ Lint/Debugger:
 # Style preference
 Style/MethodDefParentheses:
   Enabled: false
+
+# Don't force ruby version of gem without knowing what customers are using.
+Gemspec/RequiredRubyVersion:
+  Enabled: false
