--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,12 +1,12 @@
 name: ci
 
 on:
-  push:
-    branches: [ master ]
-  # the following triggers are for testing purposes only. remove before merge.
   pull_request:
-    branches: [ master ]
-  workflow_dispatch:
+  push:
+    branches:
+      - master
+    tags:
+      - 'v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
   build:
@@ -31,9 +31,33 @@ jobs:
       - name: Run tests
         run: bundle exec rake test
 
+      - name: Capture version
+        run: echo "VERSION=$(cat VERSION)" >> $GITHUB_ENV
+
+      - name: Login to Docker Hub
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: docker/login-action@v2
+        with:
+          username: scalyr
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
       - name: Build Docker Image
         uses: docker/build-push-action@v4
         with:
-          push: false
+          # set push to true when a tag is created
+          push: ${{ startsWith(github.ref, 'refs/tags/v') }}
           file: docker/Dockerfile
           context: .
+          tags: |
+            scalyr/fluentd:latest
+            scalyr/fluentd:${{ env.VERSION }}
+
+      - name: Write RubyGems Credentials to a file
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: ./scripts/set-up-rubygems-credentials.sh
+        env:
+          RUBYGEMS_API_KEY: ${{ secrets.RUBYGEMS_API_KEY }}
+
+      - name: Publish package to RubyGems
+        if: startsWith(github.ref, 'refs/tags/v')
+        run: gem push pkg/fluent-plugin-scalyr-${{ env.VERSION }}.gem
