--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -34,6 +34,12 @@ jobs:
       - name: Capture version
         run: echo "VERSION=$(cat VERSION)" >> $GITHUB_ENV
 
+      - name: Verify tag version matchs VERSION file
+        # Only run this test when run on a tag
+        if: startsWith(github.ref, 'refs/tags/v')
+        # Fail if the tag name does not match the version in the VERSION file.
+        run: test "${{ github.ref }}" == "refs/tags/v${{ env.VERSION }}"
+
       - name: Login to Docker Hub
         if: startsWith(github.ref, 'refs/tags/v')
         uses: docker/login-action@v2
