--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,15 +1,20 @@
-FROM fluent/fluentd:v1.17.0-1.0
+FROM fluent/fluentd:v1.18.0-debian AS build
 
 USER root
 
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends build-essential ruby-dev zlib1g-dev
+
 COPY ./pkg/fluent-plugin-scalyr-*.gem /
 RUN mv /fluent-plugin-scalyr-*.gem /fluent-plugin-scalyr.gem
+RUN gem install --install-dir /bundle fluent-plugin-scalyr.gem \
+    && (cd /bundle; tar czf /bundle.tar.gz .)
 
-RUN apk add --no-cache --update --virtual .build-deps \
-        build-base ruby-dev \
- && gem install fluent-plugin-scalyr.gem \
- && gem sources --clear-all \
- && apk del .build-deps \
- && rm -rf /tmp/* /var/tmp/* /usr/lib/ruby/gems/*/cache/*.gem
+FROM fluent/fluentd:v1.18.0-debian
+
+USER root
+
+COPY --from=build /bundle.tar.gz /
+RUN tar xzf /bundle.tar.gz -C /usr/local/bundle && rm /bundle.tar.gz
 
 USER fluent
